gearset/main/default/objects/DXBigObject__b/fields/SomeNumber__c.field-meta.xml
<CustomField>
    <fullName>SomeNumber__c</fullName>
    <label>SomeNumber</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>